--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Source code example",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "gulp sass"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/RomanB96/SourceCodeExample/issues"
   },
-  "homepage": "https://github.com/RomanB96/SourceCodeExample#readme"
+  "homepage": "https://github.com/RomanB96/SourceCodeExample#readme",
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.1"
+  }
 }
