--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "gulp sass",
-    "watch": "gulp watch"
+    "watch": "gulp watch",
+    "release": "gulp release"
   },
   "repository": {
     "type": "git",
