--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-autoprefixer": "^4.0.0",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.1",
+    "gulp-sync": "0.1.4",
     "gulp-uglify": "^3.0.0",
     "sassdoc": "^2.4.0",
     "vinyl-buffer": "^1.0.0",
