--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "browserify": "^14.5.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
+    "gulp-htmlmin": "^3.0.0",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.1",
     "gulp-sync": "0.1.4",
