--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "sassdoc": "^2.4.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "dependencies": {
+    "jquery": "^3.2.1"
   }
 }
